--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -50,7 +50,7 @@ nav ul.navbar-nav.nav-accordion.d-none {
   position: absolute;
   z-index: 0;
   right: 84%;
-  top: 107%;
+  top:98%;
   background-image: url(/images/block-background.png);
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -60,6 +60,18 @@ nav ul.navbar-nav.nav-accordion.d-none {
   width: 100%;
 }
 
+.brand_1{
+  background-color: #fff;
+}
+.lay_2{
+  color: #292948;
+}
+.brand_2{
+  color: #292948;
+}
+.lay_3{
+  color: #e37c53
+}
 .flexible-hero__heading {
   font-weight: 600;
   line-height: 45px;
@@ -124,18 +136,27 @@ nav ul.navbar-nav li .plant_4:hover {
   position: relative;
   display: inline-block;
 }
-/* Cards */
+.card-text{
+    /* padding: 30px; */
+}
 .card-hover:hover img,
 .card-hover:hover h3,
 .card-hover:hover p {
   color: #ffffff !important;
 }
+/* .card-hover:hover .cls-3 {
+  fill: #fff !important;
+} */
+/* .card-hover:hover .cls-2 {
+  fill: #fff !important;
+} */
+/* .card-hover:hover .cls-2, */
+.card-hover:hover .cls-1 {
+  fill: #fff !important;
+}
 .card-hover:hover {
-  background-image: linear-gradient(
-    to right,
-    rgba(255, 0, 0, 0),
-    rgb(250, 97, 97)
-  );
+  height: 400px !important;
+  background: linear-gradient(233.4deg, #953091 -29.53%, #f68f44 99.34%);
 }
 .card-hover:hover p {
   display: block !important;
@@ -143,22 +164,6 @@ nav ul.navbar-nav li .plant_4:hover {
 .card-hover:hover h3 {
   display: block;
 }
-/* Cards design ends */
-
-/* .card-hover{
-    background-color: #d2d9e0;
-}
-.card-body{ */
-/* width: 50%; */
-/* color: rgba(49, 33, 33, 0); 
-} */
-/* .card-hover, h3{
-      color: rgba(49, 33, 33, 0);
-  } */
-/* .card-hover :hover{
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(237,136,156,1) 95%);
-  } */
 .image-hover .caption {
   position: absolute;
   top: 50%;
@@ -171,5 +176,19 @@ nav ul.navbar-nav li .plant_4:hover {
 }
 
 .image-hover:hover .caption {
-  display: block;
+  display: 0 2%
+} 
+
+.barrytone{
+  display: flex;
+  height: 50px;
+  width: 150px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 30px;
 }
+.img-fluid.carol_img{
+  margin-right: 50px;
+
+}
+
